[gd_scene load_steps=2 format=3 uid="uid://bufx6wcek0aj8"]

[ext_resource type="Script" path="res://minions/spawner.gd" id="1_a68u2"]

[node name="Spawner" type="Node2D"]
script = ExtResource("1_a68u2")

[node name="P1Lower" type="Marker2D" parent="."]
position = Vector2(944, 3456)

[node name="LowerThrough" type="Marker2D" parent="."]
position = Vector2(3440, 3456)

[node name="P2Lower" type="Marker2D" parent="."]
position = Vector2(3440, 928)

[node name="P1Upper" type="Marker2D" parent="."]
position = Vector2(560, 3072)

[node name="UpperThrough" type="Marker2D" parent="."]
position = Vector2(560, 512)

[node name="P2Upper" type="Marker2D" parent="."]
position = Vector2(3072, 512)

[node name="P2Mid" type="Marker2D" parent="."]
position = Vector2(2309, 1764)

[node name="P1Mid" type="Marker2D" parent="."]
position = Vector2(1854, 2226)

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[connection signal="timeout" from="WaveTimer" to="." method="_on_timer_timeout"]
